force-app/main/default/objects/Swap_Listing__c/Swap_Listing__c.object-meta.xml
<CustomObject>
    <label>Swap Listing</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Swap Listings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>