force-app/main/default/objects/Swap_Listing__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Hardware</fullName><default>true</default><label
        >Hardware</label></value>
            <value><fullName>IoT</fullName><default>false</default><label
        >IoT</label></value>
            <value><fullName>Connectivity</fullName><default
        >false</default><label>Connectivity</label></value>
            <value><fullName>Other</fullName><default>false</default><label
        >Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>