force-app/main/default/objects/Swap_Listing__c/fields/CO2_Saved__c.field-meta.xml
<CustomField>
    <fullName>CO2_Saved__c</fullName>
    <label>CO2 Saved (kg)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>