force-app/main/default/objects/Swap_Listing__c/fields/Is_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>