force-app/main/default/objects/Swap_Listing__c/fields/Owner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Owner_Contact__c</fullName>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Swap Listings</relationshipLabel>
    <relationshipName>Swap_Listings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>