force-app/main/default/objects/Swap_Listing__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Available</fullName><default>true</default><label
        >Available</label></value>
            <value><fullName>Pending</fullName><default>false</default><label
        >Pending</label></value>
            <value><fullName>Completed</fullName><default>false</default><label
        >Completed</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label
        >Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>